[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/Car/Controller.gd" type="Script" id=1]
[ext_resource path="res://Entities/Car/CameraTrack.gd" type="Script" id=2]
[ext_resource path="res://Entities/Car/Modular_car.tscn" type="PackedScene" id=3]
[ext_resource path="res://models/Modular_Car/Body/Body_Curvy_test.gltf" type="PackedScene" id=7]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, -1.02937, 0, 0, Vector2( 1, 0 ), -3.31636, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, -0.763636, 0, 1, Vector2( 1, 0.236364 ), -0.763636, -9.85909, 1, 1 ]

[sub_resource type="Curve" id=3]
bake_resolution = 15
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 0.1, 0.1, 0.2 )
direction = Vector3( 1, 0, 1 )
spread = 90.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.3
scale_random = 0.5
scale_curve = SubResource( 4 )

[sub_resource type="SphereMesh" id=6]
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[node name="Controller" type="Spatial"]
script = ExtResource( 1 )
acceleration_curve = SubResource( 1 )
turning_curve = SubResource( 2 )

[node name="Car_Base" parent="." instance=ExtResource( 3 )]
body = ExtResource( 7 )

[node name="ParticlesLeft" type="Particles" parent="Car_Base"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.15, 0.65 )
emitting = false
amount = 128
fixed_fps = 60
local_coords = false
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="ParticlesRight" type="Particles" parent="Car_Base"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.15, 0.65 )
emitting = false
amount = 128
fixed_fps = 60
local_coords = false
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="CameraTrack" type="Spatial" parent="."]
script = ExtResource( 2 )
track_object = NodePath("../Car_Base")

[node name="Camera" type="Camera" parent="CameraTrack"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 2.5, 3 )
current = true
far = 500.0
